Add lighting and make neater architecture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -521,6 +521,8 @@ add_executable(playground
 	common/controls.hpp
 	common/texture.cpp
 	common/texture.hpp
+	common/objloader.cpp
+	common/objloader.hpp
 )
 target_link_libraries(playground
 	${ALL_LIBS}
