Clean up and encapsulate stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ include_directories(
 	external/glew-1.13.0/include/
 	external/assimp-3.0.1270/include/
 	external/bullet-2.81-rev2613/src/
+	external/freetype-2.10.0/include/
 	.
 )
 
@@ -46,6 +47,7 @@ set(ALL_LIBS
 	${OPENGL_LIBRARY}
 	glfw
 	GLEW_1130
+	freetype
 )
 
 add_definitions(
@@ -523,7 +525,13 @@ add_executable(playground
 	common/texture.hpp
 	common/objloader.cpp
 	common/objloader.hpp
-)
+	common/vboindexer.cpp
+	common/vboindexer.hpp
+	playground/Texture.hpp
+	playground/Model.hpp
+	playground/Mesh.hpp
+	playground/LoadException.hpp
+		playground/Shader.hpp playground/Character.hpp playground/FontTextureManager.hpp)
 target_link_libraries(playground
 	${ALL_LIBS}
 )
